docs/covering-dates.bnf
<month> ::= "Jan" | "Feb" | "Mar" | "Apr" | "May" | "June" | "July" | "Aug" | "Sept" | "Oct" | "Nov" | "Dec"

<year> ::= valid year

<year_month> ::= <year> <month>

<year_month_day> ::= <year> <month> valid day of month

<single> ::= <year> | <year_month> | <year_month_day>

<range> ::= <single> "-" <single>

<approx> ::= "?" <range> | "?" <single> | "c" <range> | "c" <single>

<derived> ::= "[" <range> "]" | "[" <single> "]" | "[" <approx> "]"

<undated> ::= "undated"

// I assume there can be an unbounded number of "gaps" - the only example I
// have is "1868; 1890-1902; 1933"
<gap-date> ::= <single> | <range> ";" <gap-date>

<covering-date> ::= <range> | <single> | <derived> | <appox> | <undated> | <gap-date>
